--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "types": [
-    "node"
-    ],
+        "jest",
+        "node"
+        ],
     "typeRoots": [
     "./types",
     "@types",
