--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
